package edu.javacourse.studentorder.domain;

public class Adress {
    private String postcode;
    private String street;
    private String building;
    private String extension;
    private String apartment;
}
