package edu.javacourse.studentorder.domain;

public class AnswerChildren {
    boolean success;
}
