package edu.javacourse.studentorder.domain;

public class AnswerCityRegister {
    public boolean success;
}
