package edu.javacourse.studentorder.domain;

public class AnswerStudent {
    boolean success;
}
