package edu.javacourse.studentorder.domain;

public class AnswerWedding {
    boolean success;
}
